--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -11,12 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  <div class="form-group">
+   <%= f.label :description %>
+   <%= f.text_field :description, class: "form-control" %>
+ </div>
+ <div class="form-group">
+   <%= f.submit class: "btn btn-primary" %>
+ </div>
 <% end %>
